# video_searching

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  ctc_model_config.yaml  main.py  menu.py  prompts_train.ipynb  pyproject.toml  requirements.txt  streamlit.py
.streamlit/: config.toml
data/: queries.csv
data/optimized_program/: mipro_optimized_v1.json  mipro_optimized_v2_38_46.json  mipro_optimized_v3_59_to_63.json  mipro_optimized_v4_medium.json  mipro_optimized_v5_paraphrase.json  mipro_optimized_v6_paraphrase_acc@3.json  mipro_optimized_v6_without_paraphrase_acc@3.json  mipro_optimized_v7_paraphrase_acc@1.json  mipro_optimized_v8_paraphrase_error_acc@1.json
data/transcriptions/: алгебра_лекция_3.json  алгебра_семинар_3.json  линал_лекция_24.json  линал_семинар_24.json  матан_лекция_12.json  матан_семинар_12.json  матстат_лекция_6.json  матстат_семинар_6.json  теорвер_лекция_6.json  теорвер_семинар_6.json
infra/: Dockerfile  docker-compose.yaml
pages/: json_page.py  test_pages.py  transcription_pages.py  video_page.py
src/: Chat.py  EncDecoder.py  QA.py  audio_processor.py  model_loader.py  retrieval.py  stt_model.py  utils.py  video_processing.py  video_processor.py
src/core/: logger.py
